Upcoming (#686)
* Added 1/8" jack

* Release 4.20

* Merge traces and wires into "Wiring" layer

* Add shabang to run.sh

* Added gray theme

* Prevent the donation label from wrapping into several lines

* Use Backspace key to delete selection in Mac OS

* Upgrade xstream to fix java 16 compatibility

* Add exec to run.sh