@@ -10,7 +10,7 @@
 	<property name="jar.dir" value="${build.dir}/jar" />
 	<property name="report.dir" value="${build.dir}/junitreport" />
 	<property name="main.class" value="org.diylc.DIYLCStarter" />
-	<property name="diylc.version" value="4.20.0" />
+	<property name="diylc.version" value="4.21.0" />
 	
 	<property name="osx.jre8.path" value="jre\osx\jdk8u275-b01-jre\Contents\Home\" />
 
@@ -116,6 +116,11 @@
 			<option value="-Dcom.apple.smallTabs=true"/>
 			<option value="-Xdock:name=DIY Layout Creator"/>
 			<option value="-Xdock:icon=Contents/Resources/diylc.icns"/>
+			
+			<option value="--add-opens java.base/java.util=ALL-UNNAMED"/>
+			<option value="--add-opens java.base/java.lang=ALL-UNNAMED"/>
+			<option value="--add-opens java.base/java.text=ALL-UNNAMED"/>
+			<option value="--add-opens java.desktop/java.awt=ALL-UNNAMED"/>
 		</bundleapp>
 		<zip destfile="${build.dir}/diylc-${diylc.version}-osx.zip">
 			<zipfileset filemode="755" dir="${build.dir}/DIYLC.app" prefix="DIYLC.app" />
